--- a/kv-secret/package.json
+++ b/kv-secret/package.json
@@ -28,6 +28,7 @@
     "@data-heaving/common": "^0.10.1"
   },
   "devDependencies": {
+    "@data-heaving/common-test-support": "0.10.2",
     "@types/node": "14.14.31",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
@@ -49,6 +50,9 @@
   "ava": {
     "files": [
       "dist/cjs/**/tests/*.spec.js"
+    ],
+    "require": [
+      "./dist/cjs/tests-setup"
     ],
     "timeout": "10m"
   }
