Something weird with the pipelines...

--- a/.github/workflows/on-develop-pr.yml
+++ b/.github/workflows/on-develop-pr.yml
@@ -42,6 +42,7 @@ jobs:
 
           cd ${{ matrix.dir }}
           npm ci
+          ls -al node_modules
           npm run build
           npm run test
       - uses: codecov/codecov-action@v1
