--- a/identity/package.json
+++ b/identity/package.json
@@ -27,6 +27,7 @@
     "@azure/identity": "^1.3.0"
   },
   "devDependencies": {
+    "@azure/identity": "^1.3.0",
     "@types/node": "14.14.31",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
