--- a/storage-blob/package.json
+++ b/storage-blob/package.json
@@ -28,6 +28,8 @@
     "@data-heaving/common": "^0.10.1"
   },
   "devDependencies": {
+    "@azure/storage-blob": "^12.5.0",
+    "@data-heaving/common": "^0.10.1",
     "@types/node": "14.14.31",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
