--- a/.github/workflows/on-develop-pr.yml
+++ b/.github/workflows/on-develop-pr.yml
@@ -24,7 +24,7 @@ jobs:
   build_and_test:
     strategy:
       matrix:
-        dir: [ identity, storage-blob, kv-secret ]
+        dir: [ identity, storage-blob, kv-secret, storage-queue ]
     runs-on: ubuntu-latest
     name: Build and test ${{ matrix.dir }}
     steps:
