--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -9,7 +9,7 @@ jobs:
   publish:
     strategy:
       matrix:
-        dir: [ identity, storage-blob, kv-secret ]
+        dir: [ identity, storage-blob, kv-secret, storage-queue ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
