--- a/.github/workflows/on-develop-pr.yml
+++ b/.github/workflows/on-develop-pr.yml
@@ -45,6 +45,7 @@ jobs:
           cd ${{ matrix.dir }}
           npm ci
           npm run build
+          docker ps -a
           npm run test
       - uses: codecov/codecov-action@v1
         with:
