--- a/.github/workflows/on-develop-pr.yml
+++ b/.github/workflows/on-develop-pr.yml
@@ -66,7 +66,7 @@ jobs:
               --entrypoint npm \
               -w /code \
               --env MVM_CONTAINER_NW='this_nw' \
-              --env AZURE_STORAGE_QUEUE_DOCKER_NW='this_nw' \
+              --env ASQ_DOCKER_NW='this_nw' \
               --network this_nw \
               this_node \
               "$@"
