Adding tests for storage-queue telemetry part.

--- a/.github/workflows/on-develop-pr.yml
+++ b/.github/workflows/on-develop-pr.yml
@@ -42,6 +42,8 @@ jobs:
         run: |
           set -e
 
+          whereis npm
+
           cd ${{ matrix.dir }}
           npm ci
           npm run build
