--- a/.github/workflows/on-develop-pr.yml
+++ b/.github/workflows/on-develop-pr.yml
@@ -23,23 +23,7 @@ on:
     - develop
 
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    steps:
-      - id: build_docker
-        name: Build Docker image
-        shell: bash
-        run: |
-          set -e
-
-          echo 'FROM node:14-alpine3.13
-            RUN apk update \
-              && apk add --no-cache docker-cli \
-              && npm install -g npm' | docker build -t this_node -
-          docker network create this_nw
-
   build_and_test:
-    needs: prepare
     strategy:
       matrix:
         dir: [ identity, storage-blob, kv-secret, storage-queue ]
@@ -64,6 +48,12 @@ jobs:
 
           # We must invoke tests via Docker, otherwise we will get an error claiming that port for another Docker container running in parallel is already allocated.
           # Not sure if this is GH or Docker bug, but nevertheless it is fixed by putting Node itself into Docker container when running tests.
+          # It also looks like docker images built in other jobs are not preserved to this job - so we need to build Docker image + create network on every run
+          echo 'FROM node:14-alpine3.13
+            RUN apk update \
+              && apk add --no-cache docker-cli \
+              && npm install -g npm' | docker build -t this_node -
+          docker network create this_nw
           function npm()
           {
             docker run \
