--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -39,7 +39,26 @@ jobs:
 
           npm ci
           npm install --no-save @jsdevtools/npm-publish
-          ./node_modules/.bin/npm-publish --access public --token '${{ secrets.NPM_TOKEN }}'
+          # We must invoke tests via Docker, otherwise we will get an error claiming that port for another Docker container running in parallel is already allocated.
+          # Not sure if this is GH or Docker bug, but nevertheless it is fixed by putting Node itself into Docker container when running tests.
+          # It also looks like docker images built in other jobs are not preserved to this job - so we need to build Docker image + create network on every run
+          echo 'FROM node:14-alpine3.13
+            RUN apk update \
+              && apk add --no-cache docker-cli \
+              && npm install -g npm' | docker build -t this_node -
+          docker network create this_nw
+          docker run \
+            --rm \
+            --entrypoint sh \
+            -v "$(pwd)/:/code/:rw" \
+            -v '/var/run/docker.sock:/var/run/docker.sock' \
+            --workdir '/code' \
+            --env MVM_CONTAINER_NW='this_nw' \
+            --env ASQ_DOCKER_NW='this_nw' \
+            --network this_nw \
+            this_node \
+            -c \
+            './node_modules/.bin/npm-publish --access public --token ${{ secrets.NPM_TOKEN }}'
 
           # TODO we must generate release notes for the package
           # TODO set up organization-wide CICD-GitHub account
